Update dependencies to remove vulnerabilities + design changes to match visual identity

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -7,3 +7,12 @@
 .navbar-dark .navbar-nav .nav-link {
   color: white !important;
 }
+
+.navbar-brand {
+  img {
+    max-height: 45px;
+    background: white;
+    border-radius: 10px;
+    max-width: 150px;
+  }
+}
