--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,36 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/home">Home</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-expanded="false">
-          Gerenciamento
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/management/users">Usuários</a>
-          <!-- <div class="dropdown-divider"></div> -->
-          <a class="dropdown-item" routerLink="/management/profiles">Perfis</a>
-        </div>
-      </li>
-    </ul>
-
-    <button (click)="logout()" class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/home"><img src="../../../assets/img/logo.png" alt="Application logo" /></a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Gerenciamento
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" routerLink="/management/users">Usuários</a></li>
+            <li><a class="dropdown-item" routerLink="/management/profiles">Perfis</a></li>
+          </ul>
+        </li>
+      </ul>
+      <button (click)="logout()" class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
+    </div>
   </div>
 </nav>
