--- a/src/app/management/profile/components/profile-details/profile-details.component.html
+++ b/src/app/management/profile/components/profile-details/profile-details.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="isLoading" class="spinner-box">
   <div class="profile-list__spinner text-center spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
+    <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
