--- a/src/app/management/user/components/user-list/user-list.component.html
+++ b/src/app/management/user/components/user-list/user-list.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div *ngIf="!users?.length && !errorMessage" class="user-list__spinner text-center spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
+    <span class="visually-hidden">Loading...</span>
   </div>
 
   <div *ngIf="!users?.length && !!errorMessage" class="user-list__error">
